--- a/PRG282 _Project/PRG282_Project/AddSuperhero/AddSuperhero/PRG282_SuperHeroProject.csproj
+++ b/PRG282 _Project/PRG282_Project/AddSuperhero/AddSuperhero/PRG282_SuperHeroProject.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,12 +54,25 @@
     <Compile Include="Forms\AddSuperhero.Designer.cs">
       <DependentUpon>AddSuperhero.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\LoadingScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LoadingScreen.Designer.cs">
+      <DependentUpon>LoadingScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SuperHeroHome.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\SuperHeroHome.Designer.cs">
       <DependentUpon>SuperHeroHome.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SuperheroSummaryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SuperheroSummaryForm.Designer.cs">
+      <DependentUpon>SuperheroSummaryForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LogicLayer\UIhelper.cs" />
     <Compile Include="PresentationLayer\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\ViewAll.cs">
@@ -69,6 +83,12 @@
     </Compile>
     <EmbeddedResource Include="Forms\AddSuperhero.resx">
       <DependentUpon>AddSuperhero.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LoadingScreen.resx">
+      <DependentUpon>LoadingScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SuperheroSummaryForm.resx">
+      <DependentUpon>SuperheroSummaryForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -98,8 +118,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="LogicLayer\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
